--- a/dllRapportVisites/dllRapportVisites.csproj
+++ b/dllRapportVisites/dllRapportVisites.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Famille.cs" />
+    <Compile Include="listeRapport.cs" />
     <Compile Include="Medecin.cs" />
     <Compile Include="Medicament.cs" />
     <Compile Include="Rapport.cs" />
